# agent-rag-service

./: .gitignore  README.md  pyproject.toml
prisma/: schema.prisma
src/agents/: embeddings.py  supervisor_agent.py  uploaded_files_agent.py
src/agents/tools/: uploaded_files.py
src/api/v1/: router.py
src/api/v1/endpoints/: graph.py  upload.py
src/api/v1/schema/: upload.py
src/config/: settings_config.py
src/core/: lifespan.py  monitoring.py  qdrant.py
src/services/v1/: upload_service.py
