[tool.poetry]
name = "rag-agent-service"
version = "0.1.0"
description = ""
authors = ["Wai Yan Min Khaing <waiyanminkhaing1997@gmail.com>"]
readme = "README.md"
packages = [
    { include = "config", from = "src" },
    { include = "core", from = "src" },
    { include = "api", from = "src" },
    { include = "db", from = "src" },
    { include = "agents", from = "src" },
    { include = "middleware", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-json-logger = "^3.3.0"
pyyaml = "^6.0.2"
prometheus-client = "^0.22.1"
psutil = "^7.0.0"
fastapi = "^0.116.0"
async-lru = "^2.0.5"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
langgraph = "^0.5.1"
langgraph-supervisor = "^0.0.27"
psycopg = "^3.2.9"
langgraph-checkpoint-postgres = "^2.0.21"
prisma = "^0.15.0"
langchain-ollama = "^0.3.4"
aiofiles = "^24.1.0"
langchain-qdrant = "^0.2.0"
langchain-text-splitters = "^0.3.8"
langchain = "^0.3.26"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
langchain-community = "^0.3.27"
pypdf = "^5.7.0"
pymupdf = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-env = "^1.1.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
env = [
    "ENV=local",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "tests"]
exclude = "^src/core/prisma/generated/"

[tool.coverage.run]
omit = ["*/__init__.py", "main.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
